SonarQube disable for Menu API
Former-commit-id: be9c4dc557d8d82214b564e36fcd29e5ab8e58e9
Former-commit-id: 92fe2c47c585ac9fc004f9be9f79316f9c5ff18c [formerly 299cc8178b82ca5c57a69ef298d17f166f2cf1af]
Former-commit-id: 005c28b37a6fcdba49ab354216cdfb7146c68ba9

--- a/.github/workflows/menu-api.yml
+++ b/.github/workflows/menu-api.yml
@@ -31,5 +31,5 @@ jobs:
           echo $PATH
           chmod -R +x ci/
           ci/build.sh menu_api
-          ci/qa.sh menu_api
+          # ci/qa.sh menu_api
         working-directory: ./src/Server/
