--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
     - develop
+    paths:
+    - './src/backend/services/identity.api/**'
   pull_request:
     branches:
     - develop
