GITHUB_TOKEN problem fixed

--- a/.github/workflows/order-api.yml
+++ b/.github/workflows/order-api.yml
@@ -33,3 +33,5 @@ jobs:
         ci/build.sh order_api
         ci/qa.sh order_api
       working-directory: ./src/backend/
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
