--- a/src/backend/gateway/restaurant-gateway/src/main/resources/application.yml
+++ b/src/backend/gateway/restaurant-gateway/src/main/resources/application.yml
@@ -27,6 +27,7 @@ zuul:
       path: /dashboard/**
       sensitiveHeaders:
       url: ${DASHBOARD_URL:http://localhost:8088}
+      strip-prefix: true
 
   host:
     connect-timeout-millis: 60000
