--- a/src/backend/gateway/nginx.conf
+++ b/src/backend/gateway/nginx.conf
@@ -3,7 +3,14 @@ server {
   listen [::]:3030;
 
   location /dashboard/ {
+      resolver 8.8.8.8;
       rewrite ^/dashboard/(.*) /$1 break;
       proxy_pass http://dashboard;
+  }
+
+  location /menu/ {
+    resolver 8.8.8.8;
+    rewrite ^/dashboard/(.*) /$1 break;
+    proxy_pass http://menu-api;
   }
 }
