--- a/src/backend/services/menu.api/Menu.API/appsettings.json
+++ b/src/backend/services/menu.api/Menu.API/appsettings.json
@@ -10,5 +10,12 @@
             "System": "Information"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "Kestrel": {
+        "EndPoints": {
+            "Http": {
+                "Url": "http://0.0.0.0:80"
+            }
+        }
+    }
 }
