--- a/src/backend/services/menu.api/Menu.API/Menu.API.csproj
+++ b/src/backend/services/menu.api/Menu.API/Menu.API.csproj
@@ -7,7 +7,8 @@
     <ProjectGuid>{0653635a-c13b-4622-965c-aa086527cb52}</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="2.2.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="3.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="3.0.2" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.103.2" />
     <PackageReference Include="Polly" Version="5.6.1" />
     <PackageReference Include="Serilog" Version="2.9.0" />
@@ -17,10 +18,11 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.0.0" />
-    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.3.0" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="5.0.0" />
+    
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.0" />
+
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
     <PackageReference Include="System.Text.Json" Version="4.6.0" />
   </ItemGroup>
