--- a/.github/workflows/menu-api.yml
+++ b/.github/workflows/menu-api.yml
@@ -26,10 +26,18 @@ jobs:
           restore-keys: |
             menu-api-dotnet-cache-key
       - uses: actions/checkout@v1
-      - name: Build & QA 
+      - name: Build
         run: |
           echo $PATH
           chmod -R +x ci/
           ci/build.sh menu_api
-          # ci/qa.sh menu_api
         working-directory: ./src/backend/
+      - uses: jurabek/dotnet-sonarscanner-github-actions@master
+      - name: QA
+        run: |
+          echo "Started sonar scanner"
+          ci/qa.sh menu_api
+        working-directory: ./src/backend/
+        env:
+          SONAR_TOKEN: ${{ secrets.MENU_API_SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
