--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
     - develop
+    paths:
+    - './src/backend/services/identity.api/**'
   pull_request:
     branches:
     - develop
