--- a/.github/workflows/menu-api.yml
+++ b/.github/workflows/menu-api.yml
@@ -11,7 +11,7 @@ on:
     - './src/backend/services/menu.api/**'
 
 jobs:
-  build:
+  build-and-test:
     name: build and test
     runs-on: ubuntu-18.04
     steps:
