--- a/src/backend/services/identity.api/Identity.API/Identity.API.csproj
+++ b/src/backend/services/identity.api/Identity.API/Identity.API.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>fd152246-f7aa-487f-b388-0f4b54e74a67</UserSecretsId>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\" />
