--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -5,8 +5,6 @@ on:
   push:
     branches:
     - develop
-    paths:
-    - './src/backend/services/identity.api/**'
   pull_request:
     branches:
     - develop
@@ -26,9 +24,9 @@ jobs:
       uses: actions/cache@v1
       with:
         path: ~/go/pkg/mod
-        key: go-cache-key
+        key: ${{ runner.os }}-go-${{ hashFiles('./src/backend/services/basket.api/go.sum') }}
         restore-keys: |
-          go-cache-key
+          ${{ runner.os }}-go-
     
     - uses: actions/checkout@v1
     - name: Build & QA 
