matrix build enabled

--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -13,23 +13,30 @@ on:
 jobs:
   build-and-test:
     name: build and test
-    runs-on: ubuntu-18.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macOS-latest, ubuntu-latest, windows-latest]
     steps:
+      - uses: actions/setup-dotnet@v1.4.0
       - name: Setup .NET Core SDK
-        uses: actions/setup-dotnet@v1.4.0
         with:
           dotnet-version: 3.1.100 
       - uses: actions/cache@v1
         with:
           path: ~/.nuget/packages
-          key: identity-api-dotnet-cache-key
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
           restore-keys: |
-            identity-api-dotnet-cache-key
+            ${{ runner.os }}-nuget-
+
       - uses: actions/checkout@v1
+      
       - name: Build
         run: |
           chmod -R +x ci/
           ci/build.sh identity_api
+        working-directory: ./src/backend/
+      
       - name: Test & QA
         run: |
           chmod -R +x ci/
@@ -37,11 +44,13 @@ jobs:
         working-directory: ./src/backend/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Upload menu-api artifact
         uses: actions/upload-artifact@v1
         with:
           name: identity_api
           path: ./src/backend/services/identity.api/identity-api-release
+
   docker-push:
     needs: build-and-test
     runs-on: ubuntu-latest
