--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -14,7 +14,10 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macOS-latest, ubuntu-latest, windows-latest]
     steps:
     - name: Install Go
       uses: actions/setup-go@v1
@@ -27,21 +30,26 @@ jobs:
         key: ${{ runner.os }}-go-${{ hashFiles('./src/backend/services/basket.api/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
-    
     - uses: actions/checkout@v1
     - name: Build & QA 
       run: |
         chmod -R +x ci/
         ci/build.sh basket_api
+      working-directory: ./src/backend/
+    - name: Test & QA
+      run: |
+        chmod -R +x ci/
         ci/qa.sh basket_api
       working-directory: ./src/backend/
     
+      if: matrix.os == 'ubuntu-latest'
+    - uses: actions/upload-artifact@v1
     - name: Upload basket-api artifact
-      uses: actions/upload-artifact@v1
       with:
         name: basket_api
         path: ./src/backend/services/basket.api/basket.api
 
+      if: matrix.os == 'ubuntu-latest'
     - uses: sonarsource/sonarcloud-github-action@master
       name: SonarCloud Scan
       with:
