--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
     - develop
+    paths:
+    - './src/backend/services/identity.api/**'
   pull_request:
     branches:
     - develop
@@ -25,18 +27,15 @@ jobs:
       - uses: actions/cache@v1
         with:
           path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/Identity.API/packages.lock.json') }}
           restore-keys: |
             ${{ runner.os }}-nuget-
-
       - uses: actions/checkout@v1
-      
       - name: Build
         run: |
           chmod -R +x ci/
           ci/build.sh identity_api
         working-directory: ./src/backend/
-      
       - name: Test & QA
         run: |
           chmod -R +x ci/
@@ -44,7 +43,6 @@ jobs:
         working-directory: ./src/backend/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Upload menu-api artifact
         uses: actions/upload-artifact@v1
         with:
