--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -17,14 +17,21 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-latest, ubuntu-latest, windows-latest]
+        os: [macOS-latest, ubuntu-latest]
     steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+
     - name: Install Go
       uses: actions/setup-go@v1
       with:
         go-version: 1.13.x
-    - uses: actions/checkout@v1
-    
+
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+
     - name: Setup cache
       uses: actions/cache@v1
       with:
