--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -18,12 +18,14 @@ jobs:
       matrix:
         os: [macOS-latest, ubuntu-latest]
     steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: '0'
+
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1.4.0
         with:
           dotnet-version: 3.1.100
-
-      - uses: actions/checkout@v1
 
       - name: Setup cache
         uses: actions/cache@v1
