--- a/src/backend/docker-compose.yml
+++ b/src/backend/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     image: restaurant/order
     build: 
       context: ./services/order.api
-      dockerfile: Dockerfile.local
+      dockerfile: local.Dockerfile
     depends_on:
       - pgsql
 
