--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
     - develop
+    paths:
+    - './src/backend/services/order.api/**'
+    
   pull_request:
     branches:
     - develop
@@ -31,6 +34,12 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: '0'
+
+    - name: Bump version and push tag
+      uses: anothrNick/github-tag-action@1.17.2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        WITH_V: true
 
     - name: Setup cache
       uses: actions/cache@v1
