--- a/.github/workflows/menu-api.yml
+++ b/.github/workflows/menu-api.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
     - develop
+    paths:
+    - './src/backend/services/order.api/**'
   pull_request:
     branches:
     - develop
@@ -21,6 +23,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: '0'
+      
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.17.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+
 
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1.4.0
