added some unit tests for identity api and order api

--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,6 @@ Images/
 src/backend/services/go/src/basket.api/main
 src/backend/services/go/pkg
 src/backend/web/web.admin/dashboard/package-lock.json
+
+
+*.sonarqube
