added vscode workspace for backend folder

--- a/src/backend/services/menu.api/Menu.API/appsettings.json
+++ b/src/backend/services/menu.api/Menu.API/appsettings.json
@@ -10,12 +10,5 @@
             "System": "Information"
         }
     },
-    "AllowedHosts": "*",
-    "Kestrel": {
-        "EndPoints": {
-            "Http": {
-                "Url": "http://0.0.0.0:80"
-            }
-        }
-    }
+    "AllowedHosts": "*"
 }
