--- a/.github/workflows/web-app.yml
+++ b/.github/workflows/web-app.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - develop
+    paths:
+      - 'src/backend/web/web.client/web-app/**'
   pull_request:
     branches:
       - develop
     paths:
-      - './src/backend/web/web.client/web-app/**'
+      - 'src/backend/web/web.client/web-app/**'
 
 jobs:
   build:
