--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -5,12 +5,12 @@ on:
     branches:
       - develop
     paths:
-      - './src/backend/services/order.api/**'
+      - 'src/backend/services/order.api/**'
   pull_request:
     branches:
       - develop
     paths:
-      - './src/backend/services/identity.api/**'
+      - 'src/backend/services/identity.api/**'
 
 jobs:
   build-and-test:
