--- a/.github/workflows/order-api.yml
+++ b/.github/workflows/order-api.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - develop
+    paths:
+      - 'src/backend/web/web.client/web-app/**'
   pull_request:
     branches:
       - develop
     paths:
-      - './src/backend/services/order.api/**'
+      - 'src/backend/services/order.api/**'
 
 jobs:
   build-and-test:
